feat: profile tab with base input, base btn

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,7 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+.block-border {
+  @apply border-2 border-[#EFEAFA] rounded-lg px-4 md:px-6 pt-6 pb-8;
+}
